--- a/src/pug/dashboard.pug
+++ b/src/pug/dashboard.pug
@@ -3,5 +3,91 @@ extends includes/base.pug
 block variables
     - var title = "Dashboard";
 
+
+block append head_css
+    link(rel="stylesheet", href="css/chart.min.css")
+
+block append bottom_js
+    script(src="js/chart.min.js")
+    script(src="js/init-chart.js")
+
 block content
-    | Dashboard !!!!
+    .mt-5#dashboard-status-report
+        h2.main-heading Dashboard
+        .d-flex
+            .dashboard-summary#dashboard-incomplete
+                .row
+                    .col-3.d-flex.align-items-center
+                        img(src="images/stat/group.png")
+                    .col-9
+                        .dashboard-status Incomplete
+                        .dashboard-count 450
+                        .dashboard-progress-bar
+                            .progress
+                                .progress-bar(role='progressbar', style="width:40%")
+                        .dashboard-progress-comment 45% Increase in 28 days
+
+            .dashboard-summary#dashboard-pending
+                .row
+                    .col-3.d-flex.align-items-center
+                        img(src="images/stat/user.png")
+                    .col-9
+                        .dashboard-status Pending
+                        .dashboard-count 450
+                        .dashboard-progress-bar
+                            .progress
+                                .progress-bar(role='progressbar', style="width:40%")
+                        .dashboard-progress-comment 45% Increase in 28 days
+            .dashboard-summary#dashboard-interpreted
+                .row
+                    .col-3.d-flex.align-items-center
+                        img(src="images/stat/edit.png")
+                    .col-9
+                        .dashboard-status Interpreted
+                        .dashboard-count 450
+                        .dashboard-progress-bar
+                            .progress
+                                .progress-bar(role='progressbar', style="width:40%")
+                        .dashboard-progress-comment 45% Increase in 28 days
+            .dashboard-summary#dashboard-suspended
+                .row
+                    .col-3.d-flex.align-items-center
+                        img(src="images/stat/money.png")
+                    .col-9
+                        .dashboard-status Suspended
+                        .dashboard-count 450$
+                        .dashboard-progress-bar
+                            .progress
+                                .progress-bar(role='progressbar', style="width:40%")
+                        .dashboard-progress-comment 45% Increase in 28 days
+
+    .mt-4#dashboard-all-charts
+        .row
+            .col-md-7
+                .bg-white.px-3
+                    .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
+                        h3.font-weight-bold.text-uppercase Hospital survey
+                        .d-flex.align-items-center
+                            a(href="#")
+                                img(src="images/chart/delete.png")
+                            a(href="#")
+                                img(src="images/chart/reload.png")
+                            a(href="#")
+                                img(src="images/chart/caret-down.png")
+                    .dashboard-chart
+                        canvas#canvas-1
+            .col-md-5
+                .bg-white.px-3
+                    .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
+                        h3.font-weight-bold.text-uppercase Hospital survey
+                        .d-flex.align-items-center
+                            a(href="#")
+                                img(src="images/chart/delete.png")
+                            a(href="#")
+                                img(src="images/chart/reload.png")
+                            a(href="#")
+                                img(src="images/chart/caret-down.png")
+                    .dashboard-chart
+                        canvas#canvas-2
+
+
