working on revision 1

--- a/src/pug/index-v2.pug
+++ b/src/pug/index-v2.pug
@@ -12,7 +12,7 @@ block main_body
     #bt-main-body
         .container-fluid
             .row
-                .col-md-6#login-bg(style="background-image: url('images/login-bg-1.jpg');")
+                .col-md-6#login-bg(style="background-image: url('images/login-bg-2.png');")
                 .col-md-6
                     #login-form.d-flex.justify-content-center.align-items-center
                         form(action="dashboard.html")
