--- a/src/pug/screen-v2.pug
+++ b/src/pug/screen-v2.pug
@@ -45,7 +45,7 @@ block content
                 a.btn.btn-info.bt-btn(href="#")
                     img(src="images/report/menu.png", alt="")
 
-    .d-flex.flex-wrap#reports-toggle-btns
+    //-.d-flex.flex-wrap#reports-toggle-btns
         button.btn.btn-default(type="button", data-toggle="collapse", data-target=".tab-pane.active .personal-info .tobecollapse") Personal Information
         button.btn.btn-default(type="button", data-toggle="collapse", data-target=".tab-pane.active .req-detail .tobecollapse") Requisition Detail
         button.btn.btn-default(type="button", data-toggle="collapse", data-target=".tab-pane.active .preg-detail .tobecollapse") Pregnancy Details
