--- a/src/scss/_login-page.scss
+++ b/src/scss/_login-page.scss
@@ -1,6 +1,7 @@
 #bt-main-body {
     #login-bg {
-        background: url('../images/login-bg-1.jpg') no-repeat left center;
+        background-repeat: no-repeat;
+        background-position: left center;
         background-size: cover;
     }
     #login-form {
