--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -8,7 +8,7 @@ block content
         form.col-12(action="#")
             .position-relative
                 .row
-                    .col-md-6
+                    .col-xl-6
                         .row
                             .col-md-3
                                 .form-group
@@ -26,7 +26,7 @@ block content
                                 .form-group
                                     label Birth Date
                                     input.form-control.jqui-datepicker(type="text", name="birth-date", autocomplete="off")
-                    .col-md-6
+                    .col-xl-6
                         .row
                             .col-md-3
                                 .form-group
@@ -47,7 +47,7 @@ block content
                                         option All
                                         option Yes
                                         option No
-                    .col-md-6(style="display:none")
+                    .col-xl-6(style="display:none")
                         #advanced-options
                             .row
                                 .col-md-3
