--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -88,7 +88,7 @@ block content
             span 333 333 results
 
         #search-table-wrapper
-            table.table.table-responsive.table-striped.bg-white.text-center
+            table.table.table-striped.bg-white.text-center
                 thead.thead-primary.text-left
                     tr
                         th(scope='col') Pat.Code
