--- a/src/pug/screen-v2.pug
+++ b/src/pug/screen-v2.pug
@@ -1,7 +1,7 @@
 extends includes/base.pug
 
 block variables
-    - var title = "Patient Report";
+    - var title = "Screening";
 
 block append head_css
     style(type='text/css').
