dashboard page responsive

--- a/src/scss/_dashboard.scss
+++ b/src/scss/_dashboard.scss
@@ -9,7 +9,7 @@
         font-size: 18px;
         @extend .open-sans;
         &:not(:last-child) {
-            margin-right: 25px;
+            // margin-right: 25px;
         }
         &>.row {
             &>[class^="col-"]{
