--- a/src/pug/dashboard.pug
+++ b/src/pug/dashboard.pug
@@ -14,56 +14,59 @@ block append bottom_js
 block content
     .mt-5#dashboard-status-report
         h2.main-heading Dashboard
-        .d-flex
-            .dashboard-summary#dashboard-incomplete
-                .row
-                    .col-3.d-flex.align-items-center
-                        img(src="images/stat/group.png")
-                    .col-9
-                        .dashboard-status Incomplete
-                        .dashboard-count 450
-                        .dashboard-progress-bar
-                            .progress
-                                .progress-bar(role='progressbar', style="width:40%")
-                        .dashboard-progress-comment 45% Increase in 28 days
-
-            .dashboard-summary#dashboard-pending
-                .row
-                    .col-3.d-flex.align-items-center
-                        img(src="images/stat/user.png")
-                    .col-9
-                        .dashboard-status Pending
-                        .dashboard-count 450
-                        .dashboard-progress-bar
-                            .progress
-                                .progress-bar(role='progressbar', style="width:40%")
-                        .dashboard-progress-comment 45% Increase in 28 days
-            .dashboard-summary#dashboard-interpreted
-                .row
-                    .col-3.d-flex.align-items-center
-                        img(src="images/stat/edit.png")
-                    .col-9
-                        .dashboard-status Interpreted
-                        .dashboard-count 450
-                        .dashboard-progress-bar
-                            .progress
-                                .progress-bar(role='progressbar', style="width:40%")
-                        .dashboard-progress-comment 45% Increase in 28 days
-            .dashboard-summary#dashboard-suspended
-                .row
-                    .col-3.d-flex.align-items-center
-                        img(src="images/stat/money.png")
-                    .col-9
-                        .dashboard-status Suspended
-                        .dashboard-count 450$
-                        .dashboard-progress-bar
-                            .progress
-                                .progress-bar(role='progressbar', style="width:40%")
-                        .dashboard-progress-comment 45% Increase in 28 days
+        .row
+            .col-xl-3.col-md-6.mb-4.mb-xl-0
+                .dashboard-summary#dashboard-incomplete
+                    .row
+                        .col-3.d-flex.align-items-center
+                            img(src="images/stat/group.png")
+                        .col-9
+                            .dashboard-status Incomplete
+                            .dashboard-count 450
+                            .dashboard-progress-bar
+                                .progress
+                                    .progress-bar(role='progressbar', style="width:40%")
+                            .dashboard-progress-comment 45% Increase in 28 days
+            .col-xl-3.col-md-6.mb-4.mb-xl-0
+                .dashboard-summary#dashboard-pending
+                    .row
+                        .col-3.d-flex.align-items-center
+                            img(src="images/stat/user.png")
+                        .col-9
+                            .dashboard-status Pending
+                            .dashboard-count 450
+                            .dashboard-progress-bar
+                                .progress
+                                    .progress-bar(role='progressbar', style="width:40%")
+                            .dashboard-progress-comment 45% Increase in 28 days
+            .col-xl-3.col-md-6.mb-4.mb-xl-0
+                .dashboard-summary#dashboard-interpreted
+                    .row
+                        .col-3.d-flex.align-items-center
+                            img(src="images/stat/edit.png")
+                        .col-9
+                            .dashboard-status Interpreted
+                            .dashboard-count 450
+                            .dashboard-progress-bar
+                                .progress
+                                    .progress-bar(role='progressbar', style="width:40%")
+                            .dashboard-progress-comment 45% Increase in 28 days
+            .col-xl-3.col-md-6.mb-4.mb-xl-0
+                .dashboard-summary#dashboard-suspended
+                    .row
+                        .col-3.d-flex.align-items-center
+                            img(src="images/stat/money.png")
+                        .col-9
+                            .dashboard-status Suspended
+                            .dashboard-count 450$
+                            .dashboard-progress-bar
+                                .progress
+                                    .progress-bar(role='progressbar', style="width:40%")
+                            .dashboard-progress-comment 45% Increase in 28 days
 
     .mt-4#dashboard-all-charts
         .row
-            .col-md-7
+            .col-xl-7
                 .bg-white.px-3
                     .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
                         h3.font-weight-bold.text-uppercase Hospital survey
@@ -76,7 +79,7 @@ block content
                                 img(src="images/chart/caret-down.png")
                     .dashboard-chart
                         canvas#canvas-1
-            .col-md-5
+            .col-xl-5
                 .bg-white.px-3
                     .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
                         h3.font-weight-bold.text-uppercase Hospital survey
