added contribution name

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,10 @@
+/**********************************************
+** *** Developer: Debashis Roy Bhowmik *** ****
+* *** Email: debashis.buet08@gmail.com *** ****
+********* *** Website: debashis.me *** ********
+* *** Github: https://github.com/wall-e-08/ ***
+***********************************************/
+
 @import 'vendor/bootstrap/variables';
 
 // colors
