--- a/src/scss/_dashboard.scss
+++ b/src/scss/_dashboard.scss
@@ -1,3 +1,10 @@
+/**********************************************
+** *** Developer: Debashis Roy Bhowmik *** ****
+* *** Email: debashis.buet08@gmail.com *** ****
+********* *** Website: debashis.me *** ********
+* *** Github: https://github.com/wall-e-08/ ***
+***********************************************/
+
 #dashboard-status-report {
     .dashboard-summary {
         $pad: 12px;
