--- a/src/scss/_main-body.scss
+++ b/src/scss/_main-body.scss
@@ -1,3 +1,10 @@
+/**********************************************
+** *** Developer: Debashis Roy Bhowmik *** ****
+* *** Email: debashis.buet08@gmail.com *** ****
+********* *** Website: debashis.me *** ********
+* *** Github: https://github.com/wall-e-08/ ***
+***********************************************/
+
 #bt-main-body{
     $sidebar-width: 64px;
     #bt-sidebar {
