--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -1,3 +1,10 @@
+/**********************************************
+** *** Developer: Debashis Roy Bhowmik *** ****
+* *** Email: debashis.buet08@gmail.com *** ****
+********* *** Website: debashis.me *** ********
+* *** Github: https://github.com/wall-e-08/ ***
+***********************************************/
+
 @font-face {
     font-family: 'Aller';
     src: url('../fonts/aller.ttf');
