--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -1,3 +1,10 @@
+/**********************************************
+** *** Developer: Debashis Roy Bhowmik *** ****
+* *** Email: debashis.buet08@gmail.com *** ****
+********* *** Website: debashis.me *** ********
+* *** Github: https://github.com/wall-e-08/ ***
+***********************************************/
+
 #filter-options {
     $filter-div-fare: 25px;
     padding: $filter-div-fare 0;
