--- a/src/pug/dashboard.pug
+++ b/src/pug/dashboard.pug
@@ -74,7 +74,7 @@ block content
             .col-xl-7
                 .bg-white.px-3
                     .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
-                        h3.font-weight-bold.text-uppercase Hospital survey
+                        h3.font-weight-bold Screening Stats
                         .d-flex.align-items-center
                             a(href="#")
                                 img(src="images/chart/delete.png")
@@ -87,7 +87,7 @@ block content
             .col-xl-5
                 .bg-white.px-3
                     .d-flex.justify-content-between.align-items-center.open-sans.mb-0.dlc-header
-                        h3.font-weight-bold.text-uppercase Hospital survey
+                        h3.font-weight-bold Screening Stats
                         .d-flex.align-items-center
                             a(href="#")
                                 img(src="images/chart/delete.png")
